# iris

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  cpp.hint  iris.natvis  rvariant.natvis
.github/workflows/: build.yml  ci.yml
doc/: .gitignore  docinfo.html  rvariant.adoc  rvariant.html
include/iris/: color_format.hpp  colorize_format.hpp  compare.hpp  cond_trivial_smf.hpp  config.hpp  default_init_allocator.hpp  enum_bitops.hpp  enum_bitops_algorithm.hpp  enum_bitops_io.hpp  exception.hpp  fixed_string.hpp  format_traits.hpp  hash.hpp  hash_fwd.hpp  hash_util.hpp  indirect.hpp  indirect_pmr.hpp  io_fwd.hpp  requirements.hpp  rvariant.hpp  string.hpp  type_traits.hpp
include/iris/bits/: is_function_object.hpp  specialization_of.hpp
include/iris/core/: cond_trivial.hpp  cond_trivial_smf.hpp  config.hpp  hash.hpp  hash_fwd.hpp  io.hpp  library.hpp  requirements.hpp  seq.hpp  type_traits.hpp
include/iris/hash/: FNV_hash.hpp
include/iris/pp/: .clang-tidy  add.hpp  bool.hpp  cat.hpp  comma.hpp  decrement.hpp  for.hpp  if.hpp  increment.hpp  not_equal.hpp  rec.hpp  repeat.hpp  seq.hpp  stringize.hpp  sub.hpp  tuple.hpp  while.hpp
include/iris/preprocess/: bool.hpp  decrement.hpp  for.hpp  if.hpp  increment.hpp  not_equal.hpp  repeat.hpp  seq.hpp  stringize.hpp  tuple.hpp
include/iris/rvariant/: pack.hpp  recursive_wrapper.hpp  recursive_wrapper_pmr.hpp  rvariant.hpp  rvariant_io.hpp  subset.hpp  variant_helper.hpp
include/iris/rvariant/detail/: recursive_traits.hpp  rvariant_fwd.hpp  seq.hpp  variant_requirements.hpp  variant_storage.hpp  visit.hpp
include/iris/unicode/: string.hpp
include/yk/: default_init_allocator.hpp  format_traits.hpp  hash.hpp  indirect.hpp  indirect_pmr.hpp  rvariant.hpp
include/yk/core/: cond_trivial.hpp  config.hpp  hash.hpp  io.hpp  library.hpp  requirements.hpp  seq.hpp  type_traits.hpp
include/yk/rvariant/: pack.hpp  recursive_wrapper.hpp  recursive_wrapper_pmr.hpp  rvariant.hpp  rvariant_io.hpp  subset.hpp  variant_helper.hpp
include/yk/rvariant/detail/: recursive_traits.hpp  rvariant_fwd.hpp  variant_requirements.hpp  variant_storage.hpp  visit.hpp
scripts/: gen_repeat.py  gen_tuple.py
test/: CMakeLists.txt  color_format.cpp  colorize_format.cpp  core.cpp  cpp.hint  enum.cpp  indirect.cpp  io.cpp  iris_io_test.hpp  iris_test.hpp  preprocess.cpp  test.hpp  type_traits.cpp
test/rvariant/: CMakeLists.txt  benchmark.cpp  benchmark_support.cpp  benchmark_support.hpp  core_test.cpp  cpp.hint  dummy.cpp  flexible.cpp  flexible_test.cpp  get_visit.cpp  get_visit_test.cpp  indirect_test.cpp  io.cpp  io_test.cpp  iris_rvariant_test.hpp  many_alternatives_32.cpp  many_alternatives_32_test.cpp  recursive_wrapper.cpp  recursive_wrapper_test.cpp  rvariant.cpp  rvariant_test.cpp  rvariant_test.hpp  truly_recursive.cpp  truly_recursive_test.cpp
test/unicode/: CMakeLists.txt
test/unicode/string/: CMakeLists.txt  apitests.cpp  string.cpp  test_cpp11.cpp  test_cpp17.cpp  test_cpp20.cpp  utf8_invalid.cpp
